# AFT-Geant4

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  FiberTarget.cc
analysis/: mm_xi2.cc
analysis/fiber_display/: convert.cc  display.cc  display2.cc  display3.cc  display_kminus.cc  fiber_12Xi-4.root_Log
analysis/gen1/: ParamMan.cc  ParamMan.hh  constant.hh  create_seed.cc  create_seed.hh  nuclmass.cc
analysis/gen2/: constant.hh  genseed.cc
analysis/resostudy/: mmreso.cc  resodat  zcormm.cc
analysis/root/: kbeam.root_Log
include/: FiberTargetDetectorConstruction.hh  FiberTargetEventAction.hh  FiberTargetMinEkineCuts.hh  FiberTargetParamManager.hh  FiberTargetPhysicsList.hh  FiberTargetPrimaryGeneratorAction.hh  FiberTargetRunAction.hh  FiberTargetSpecialCuts.hh  FiberTargetSteppingAction.hh  FiberTargetTransportation.hh.old  FiberTargetvdHit.hh  FiberTargetvdSD.hh  MaterialList.hh  TargetHit.hh  TargetSD.hh
run/: FiberTarget
run/input/: param.in~  param2.in  param2.in~  param3.in  param3.in~
run/macro/: init.mac  run.mac  run.mac~  vis.mac  vrml.mac
run/seed/: fiber_10.08cm_12Xi.seed
src/: FiberTargetDetectorConstruction.cc  FiberTargetDetectorConstruction.cc~  FiberTargetEventAction.cc  FiberTargetMinEkineCuts.cc  FiberTargetParamManager.cc  FiberTargetPhysicsList.cc  FiberTargetPrimaryGeneratorAction.cc  FiberTargetRunAction.cc  FiberTargetSpecialCuts.cc  FiberTargetSteppingAction.cc  FiberTargetTransportation.cc.old  FiberTargetvdHit.cc  FiberTargetvdSD.cc  MaterialList.cc  TargetHit.cc  TargetSD.cc
